:wrench: design systeam

--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-systeam/packages/react/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-systeam/packages/react/package.json
@@ -19,5 +19,8 @@
     "@ofelipescherer/eslint-config": "*",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@stitches/react": "^1.2.8"
   }
 }
