--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-systeam/packages/tokens/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-systeam/packages/tokens/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@ofelipescherer/eslint-config": "*",
     "@ofelipescherer/ts-config": "*",
+    "@types/react": "^18.0.35",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
