--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/tokens/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs",
+  "name": "@ofelipescherer-igite/tokens",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^5.1.6"
+  }
 }
