:sparkles: feat/config typescript

--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/tokens/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/tokens/package.json
@@ -11,7 +11,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "tsup": "^7.1.0",
     "typescript": "^5.1.6"
