--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/react/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/react/package.json
@@ -11,9 +11,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@ofelipescherer-igite/tokens": "*",
+    "@ofelipescherer-ignite/ts-config": "*",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6"
   }
