:sparkles: feat: eslint-config

--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/tokens/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/tokens/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@ofelipescherer-ignite/ts-config": "*",
+    "@ofelipescherer-ignite/eslint-config": "*",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6"
   }
