--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/react/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/react/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@ofelipescherer-igite/tokens": "*",
     "@ofelipescherer-ignite/ts-config": "*",
+    "@ofelipescherer-ignite/eslint-config": "*",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6"
   }
