:sparkles: feat: tokens colors config

--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/docs/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/docs/package.json
@@ -25,5 +25,12 @@
     "react-dom": "^18.2.0",
     "storybook": "^7.0.24",
     "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "@ofelipescherer-ignite/eslint-config": "*",
+    "@ofelipescherer-ignite/ts-config": "*",
+    "@ofelipescherer-ignite/react": "*",
+    "@ofelipescherer-ignite/tokens": "*",
+    "polished": "^4.2.2"
   }
 }
