--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/docs/tsconfig.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/docs/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "@ofelipescherer-ignite/ts-config/react.json",
-  "include": ["src"]
+  "include": ["src", "../react/src/components/Box.tsx"]
 }
