--- a/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/react/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/05-design-system/packages/react/package.json
@@ -13,8 +13,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@ofelipescherer-ignite/tokens": "*",
     "@ofelipescherer-ignite/eslint-config": "*",
+    "@ofelipescherer-ignite/tokens": "*",
     "@ofelipescherer-ignite/ts-config": "*",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -23,6 +23,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.8"
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@stitches/react": "^1.2.8",
+    "phosphor-react": "^1.4.1"
   }
 }
