--- a/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ignite-ui/react": "^2.2.4",
+    "@phosphor-icons/react": "^2.0.13",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
@@ -19,8 +19,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "autoprefixer": "^10",
+    "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "typescript": "^5"
   }
 }
