--- a/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@phosphor-icons/react": "^2.0.13",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10",
     "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
