--- a/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@phosphor-icons/react": "^2.0.13",
+    "clsx": "^2.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
