--- a/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@phosphor-icons/react": "^2.0.13",
+    "@prisma/client": "^5.4.2",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "next": "13.5.4",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/cookie": "^0.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
