--- a/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
+++ b/rocketseat/rockeseat-bootcamp/reactjs/06-ignite-call/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@ignite-ui/react": "^2.2.4",
     "@phosphor-icons/react": "^2.0.13",
     "@prisma/client": "^5.4.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "next": "13.5.4",
